tests/errors/pre_asm/mcr_unexpected_chars_call/mcr_unexpected_chars_call.as
; unexpected characters following macro call
mcr test_mcr
mov r1, r2
endmcr

test_mcr j
